force-app/main/default/objects/Student__c/fields/Student_Age__c.field-meta.xml
<CustomField>
    <fullName>Student_Age__c</fullName>
    <label>Student Age</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>