force-app/main/default/objects/Student__c/fields/Student_City__c.field-meta.xml
<CustomField>
    <fullName>Student_City__c</fullName>
    <label>Student City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Student_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Louisville</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>