force-app/main/default/objects/Student__c/fields/Student_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Contact_No__c</fullName>
    <label>Student Contact No</label>
    <type>Phone</type>
</CustomField>