force-app/main/default/objects/Student__c/fields/Student_Country__c.field-meta.xml
<CustomField>
    <fullName>Student_Country__c</fullName>
    <label>Student Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>