force-app/main/default/objects/Student__c/fields/Student_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Student_Country_Code__c</fullName>
    <formula>CASE(TEXT(Student_Country__c),&quot;INDIA&quot;,&quot;91&quot;,&quot;USA&quot;,&quot;1&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Country Code</label>
    <type>Text</type>
</CustomField>