force-app/main/default/objects/Student__c/fields/Student_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Student_IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Student IsActive</label>
    <type>Checkbox</type>
</CustomField>