force-app/main/default/objects/Student__c/fields/Student_Marks__c.field-meta.xml
<CustomField>
    <fullName>Student_Marks__c</fullName>
    <label>Student Marks</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>