force-app/main/default/objects/Student__c/fields/Student_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Student_Nationality__c</fullName>
    <label>Student Nationality</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>American</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>