force-app/main/default/objects/Student__c/fields/Student_Sports_Interest__c.field-meta.xml
<CustomField>
    <fullName>Student_Sports_Interest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Student Sports Interest</label>
    <type>Checkbox</type>
</CustomField>