force-app/main/default/objects/Student__c/fields/Subject_Count__c.field-meta.xml
<CustomField>
    <fullName>Subject_Count__c</fullName>
    <label>Subject Count</label>
    <summaryForeignKey>Subject__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>