force-app/main/default/objects/Student__c/validationRules/Staus_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Staus_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>IF(TEXT(PRIORVALUE(Status__c)) = &quot;Promoted to Next Class&quot;,ISCHANGED(Status__c),NULL)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Promoted to Next Class can&apos;t be returned to New</errorMessage>
</ValidationRule>